Update path for _site directory check in publish-docs workflow
The check for the _site directory was updated to reflect its location under the docs/ directory. This ensures the workflow runs correctly with the updated project structure.

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -39,8 +39,8 @@ jobs:
 
       - name: Check _site directory
         run: |
-          if [ ! -d "_site" ]; then
-            echo "Error: _site directory not found!"
+          if [ ! -d "docs/_site" ]; then
+            echo "Error: docs/_site directory not found!"
             exit 1
           fi
 
